--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -43,7 +43,7 @@
   </tr>
   <tr>
     <th colspan="2" class="is-info">Fixtues: Flash</th>
-  </tr>  
+  </tr>
   <tr>
     <td>A page with a flash (clientside only)</td>
     <td><a role="button" href="[[=URL('flash_example')]]">example</a></td>
@@ -54,21 +54,21 @@
   </tr>
   <tr>
     <th colspan="2" class="is-info">Fixtues: Session</th>
-  </tr>  
+  </tr>
   <tr>
     <td>A page with a counter</td>
     <td><a role="button" href="[[=URL('session/counter')]]">example</a></td>
   </tr>
   <tr>
     <th colspan="2" class="is-info">Helpers</th>
-  </tr>  
+  </tr>
   <tr>
     <td>A page using yatl helpers</td>
     <td><a role="button" href="[[=URL('helpers')]]">example</a></td>
   </tr>
   <tr>
     <th colspan="2" class="is-info">Internationalization and Pluralization</th>
-  </tr>  
+  </tr>
   <tr>
     <td>A page using internationalization (try set browser to italian)</td>
     <td><a role="button" href="[[=URL('hello')]]">example</a></td>
@@ -79,14 +79,14 @@
   </tr>
   <tr>
     <th colspan="2" class="is-info">Components</th>
-  </tr>  
+  </tr>
   <tr>
     <td>A page embedding a py4web component via ajax (no Vue)</td>
     <td><a role="button" href="[[=URL('component_loader')]]">example</a></td>
   </tr>
   <tr>
     <th colspan="2" class="is-info">Forms</th>
-  </tr>  
+  </tr>
   <tr>
     <td>A page with a create form</td>
     <td><a role="button" href="[[=URL('create_form')]]">example</a></td>
@@ -105,14 +105,14 @@
   </tr>
   <tr>
     <th colspan="2" class="is-info">Grid (no vue.js)</th>
-  </tr>  
+  </tr>
   <tr>
     <td>A page with an serverside pure html grid</td>
     <td><a role="button" href="[[=URL('html_grid')]]">example</a></td>
   </tr>
   <tr>
     <th colspan="2" class="is-info">Grid (requires Vue.js)</th>
-  </tr>  
+  </tr>
   <tr>
     <td>A page with an ajax powered grid</td>
     <td><a role="button" href="[[=URL('ajax_grid')]]">example</a></td>
@@ -123,14 +123,14 @@
   </tr>
   <tr>
     <th colspan="2" class="is-info">VueGrid (requires Vue.js)</th>
-  </tr>  
+  </tr>
   <tr>
     <td>Sample Vue.js client-side grid.  Subclass components.grid.Grid to tailor.</td>
     <td><a role="button" href="[[=URL('vuegrid')]]">example</a></td>
   </tr>
   <tr>
     <td>Sample Vue.js client-side grid using Bulma css.  Subclass components.grid.Grid to tailor.</td>
-    <td><a href="[[=URL('vuegrid_bulma')]]">example</a></td>
+    <td><a role="button" href="[[=URL('vuegrid_bulma')]]">example</a></td>
   </tr>
   <tr>
     <td>Javascript file uploader.  Subclass components.fileupload.FileUpload to tailor.</td>
@@ -142,7 +142,7 @@
   </tr>
   <tr>
     <td>Custom Vue form using Bulma css.  Subclass components.vueform.VueForm to tailor.</td>
-    <td><a href="[[=URL('vue_form_bulma')]]">example</a></td>
+    <td><a role="button" href="[[=URL('vue_form_bulma')]]">example</a></td>
   </tr>
   <tr>
     <td>Insertion form in Vue.  Subclass components.vueform.InsertForm to tailor.</td>
@@ -150,7 +150,7 @@
   </tr>
   <tr>
     <td>Insertion form in Vue, using Bulma css.  Subclass components.vueform.InsertForm to tailor.</td>
-    <td><a href="[[=URL('insert_form_bulma')]]">example</a></td>
+    <td><a role="button" href="[[=URL('insert_form_bulma')]]">example</a></td>
   </tr>
   <tr>
     <td>Update form in Vue.  Subclass components.vueform.TableForm to tailor.</td>
@@ -158,7 +158,7 @@
   </tr>
   <tr>
     <td>Update form in Vue, using Bluma css.  Subclass components.vueform.TableForm to tailor.</td>
-    <td><a href="[[=URL('update_form_bulma')]]">example</a></td>
+    <td><a role="button" href="[[=URL('update_form_bulma')]]">example</a></td>
   </tr>
   <tr>
     <td>Star rating component in Vue.  Subclass components.starrater.StarRater to tailor.</td>
@@ -172,6 +172,6 @@
   <tr>
     <td>Star rating component in Vue using Bulma css; example of component instantiation from Vue.
       Subclass components.starrater.StarRater to tailor.</td>
-    <td><a href="[[=URL('star_rater_vue_bulma')]]">example</a></td>
+    <td><a role="button" href="[[=URL('star_rater_vue_bulma')]]">example</a></td>
   </tr>
 </table>
