--- a/apps/examples/static/components/grid/grid.html
+++ b/apps/examples/static/components/grid/grid.html
@@ -1,29 +1,19 @@
-<div class="section">
+<div>
   <div v-if="rows.length > 0" class="grid">
     <!-- Search bar -->
-    <div class="level">
-      <div class="field is-grouped">
-        <div class="control is-expanded">
-          <div class="field has-addons">
-            <div class="control is-expanded">
-              <input class="input" type="text" v-model="search_text" @keydown="search_enter" :placeholder="search_placeholder">
-            </div>
-            <div class="control">
-              <button class="button has-text-grey" @click="clear_search">
-                <i class="fa fa-times-circle"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="control">
-          <button class="button is-info" @click="do_search">
-            <i class="fa fa-search"></i>
-          </button>
-        </div>
-      </div>
-    </div>
+    <table>
+      <tr>
+        <td class="control">
+        <input type="text"  class="input" v-model="search_text" @keydown="search_enter" :placeholder="search_placeholder" style="width: 100%;">
+        </td> <td style="white-space: nowrap; width: 10%; padding-left: 5px;">
+          <button class="button" @click="clear_search"><i class="fa fa-times-circle"></i></button>
+          <button class="button" @click="do_search"><i class="fa fa-search"></i> Search</button>
+        </td>
+      </tr>
+    </table>
+
     <!-- Table -->
-    <table class="table is-striped is-fullwidth">
+    <table class="table">
       <tr v-for="row in rows">
         <template v-if="row.is_header">
           <!-- Header row -->
@@ -37,14 +27,13 @@
         <template v-else>
           <!-- Non-header row -->
           <td v-for="cell in row.cells"  :class="cell.el_class">
-            <button v-if="cell.is_button" class="button">
-              <a v-if="cell.url" :href="cell.url">{{cell.text}}</a>
+            <a v-if="cell.url" :href="cell.url">
+              <button v-if="cell.is_button" class="button">
+                {{cell.text}}
+              </button>
               <span v-else>{{cell.text}}</span>
-            </button>
-            <template v-else>
-              <a v-if="cell.url" :href="cell.url">{{cell.text}}</a>
-              <span v-else>{{cell.text}}</span>
-            </template>
+            </a>
+            <span v-else>{{cell.text}}</span>
           </td>
         </template>
       </tr>
