--- a/apps/examples/static/components/grid/grid.html
+++ b/apps/examples/static/components/grid/grid.html
@@ -2,41 +2,45 @@
   <div v-if="rows.length > 0" class="grid">
     <!-- Search bar -->
     <table>
-      <tr>
-        <td class="control">
-        <input type="text"  class="input" v-model="search_text" @keydown="search_enter" :placeholder="search_placeholder" style="width: 100%;">
-        </td> <td style="white-space: nowrap; width: 10%; padding-left: 5px;">
-          <button class="button" @click="clear_search"><i class="fa fa-times-circle"></i></button>
-          <button class="button" @click="do_search"><i class="fa fa-search"></i> Search</button>
-        </td>
-      </tr>
+      <tbody>
+        <tr>
+          <td class="control">
+          <input type="text"  class="input" v-model="search_text" @keydown="search_enter" :placeholder="search_placeholder" style="width: 100%;">
+          </td> <td style="white-space: nowrap; width: 10%; padding-left: 5px;">
+            <button @click="clear_search" style="height:34px"><i class="fa fa-times-circle"></i></button>
+            <button @click="do_search" style="height:34px"><i class="fa fa-search"></i> Search</button>
+          </td>
+        </tr>
+      </tbody>
     </table>
 
     <!-- Table -->
-    <table class="table">
-      <tr v-for="row in rows">
-        <template v-if="row.is_header">
-          <!-- Header row -->
-          <th v-for="cell in row.cells" :class="{'clickable': cell.sortable, 'has-text-link': cell.sortable}" @click="do_sort(cell._idx)">
-            <i v-if="cell.sortable && cell.sort > 0" class="fa fa-sort-asc"></i>
-            <i v-if="cell.sortable && cell.sort < 0" class="fa fa-sort-desc"></i>
-            <i v-if="cell.sortable && cell.sort === 0" class="fa fa-sort"></i>
-            {{cell.text}}
-          </th>
-        </template>
-        <template v-else>
-          <!-- Non-header row -->
-          <td v-for="cell in row.cells"  :class="cell.el_class">
-            <a v-if="cell.url" :href="cell.url">
-              <button v-if="cell.is_button" class="button">
-                {{cell.text}}
-              </button>
+    <table>
+      <tbody>
+        <tr v-for="row in rows">
+          <template v-if="row.is_header">
+            <!-- Header row -->
+            <th v-for="cell in row.cells" :class="{'clickable': cell.sortable, 'has-text-link': cell.sortable}" @click="do_sort(cell._idx)">
+              <i v-if="cell.sortable && cell.sort > 0" class="fa fa-sort-asc"></i>
+              <i v-if="cell.sortable && cell.sort < 0" class="fa fa-sort-desc"></i>
+              <i v-if="cell.sortable && cell.sort === 0" class="fa fa-sort"></i>
+              {{cell.text}}
+            </th>
+          </template>
+          <template v-else>
+            <!-- Non-header row -->
+            <td v-for="cell in row.cells"  :class="cell.el_class">
+              <a v-if="cell.url" :href="cell.url">
+                <button v-if="cell.is_button">
+                  {{cell.text}}
+                </button>
+                <span v-else>{{cell.text}}</span>
+              </a>
               <span v-else>{{cell.text}}</span>
-            </a>
-            <span v-else>{{cell.text}}</span>
-          </td>
-        </template>
-      </tr>
+            </td>
+          </template>
+        </tr>
+      </tbody>
     </table>
     <div class="pagination is-pulled-right">
       <span :class="{disabled: !has_previous}" @click="incpage(-1)">
