--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -122,15 +122,11 @@
     <td><a role="button" href="[[=URL('auth_forms')]]">example</a></td>
   </tr>
   <tr>
-    <th colspan="2" class="is-info">VueGrid (requires Vue.js)</th>
+    <th colspan="2" class="is-info">Py4web Component Examples (no.css)</th>
   </tr>
   <tr>
     <td>Sample Vue.js client-side grid.  Subclass components.grid.Grid to tailor.</td>
     <td><a role="button" href="[[=URL('vuegrid')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>Sample Vue.js client-side grid using Bulma css.  Subclass components.grid.Grid to tailor.</td>
-    <td><a role="button" href="[[=URL('vuegrid_bulma')]]">example</a></td>
   </tr>
   <tr>
     <td>Javascript file uploader.  Subclass components.fileupload.FileUpload to tailor.</td>
@@ -141,24 +137,12 @@
     <td><a role="button" href="[[=URL('vue_form')]]">example</a></td>
   </tr>
   <tr>
-    <td>Custom Vue form using Bulma css.  Subclass components.vueform.VueForm to tailor.</td>
-    <td><a role="button" href="[[=URL('vue_form_bulma')]]">example</a></td>
-  </tr>
-  <tr>
     <td>Insertion form in Vue.  Subclass components.vueform.InsertForm to tailor.</td>
     <td><a role="button" href="[[=URL('insert_form')]]">example</a></td>
   </tr>
   <tr>
-    <td>Insertion form in Vue, using Bulma css.  Subclass components.vueform.InsertForm to tailor.</td>
-    <td><a role="button" href="[[=URL('insert_form_bulma')]]">example</a></td>
-  </tr>
-  <tr>
     <td>Update form in Vue.  Subclass components.vueform.TableForm to tailor.</td>
     <td><a role="button" href="[[=URL('update_form')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>Update form in Vue, using Bluma css.  Subclass components.vueform.TableForm to tailor.</td>
-    <td><a role="button" href="[[=URL('update_form_bulma')]]">example</a></td>
   </tr>
   <tr>
     <td>Star rating component in Vue.  Subclass components.starrater.StarRater to tailor.</td>
@@ -168,6 +152,25 @@
     <td>Star rating component in Vue; example of component instantiation from Vue.
       Subclass components.starrater.StarRater to tailor.</td>
     <td><a role="button" href="[[=URL('star_rater_vue')]]">example</a></td>
+  </tr>
+   <tr>
+    <th colspan="2" class="is-info">Py4web Component Examples (Bulma)</th>
+  </tr>
+  <tr>
+    <td>Sample Vue.js client-side grid using Bulma css.  Subclass components.grid.Grid to tailor.</td>
+    <td><a role="button" href="[[=URL('vuegrid_bulma')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>Custom Vue form using Bulma css.  Subclass components.vueform.VueForm to tailor.</td>
+    <td><a role="button" href="[[=URL('vue_form_bulma')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>Insertion form in Vue, using Bulma css.  Subclass components.vueform.InsertForm to tailor.</td>
+    <td><a role="button" href="[[=URL('insert_form_bulma')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>Update form in Vue, using Bluma css.  Subclass components.vueform.TableForm to tailor.</td>
+    <td><a role="button" href="[[=URL('update_form_bulma')]]">example</a></td>
   </tr>
   <tr>
     <td>Star rating component in Vue using Bulma css; example of component instantiation from Vue.
