--- a/apps/_documentation/static/css/custom.css
+++ b/apps/_documentation/static/css/custom.css
@@ -1,22 +1,16 @@
 body {
-  font-family: "Open Sans", sans-serif !important;
+  font-family: "Roboto", sans-serif !important;
 }
-.padded {
-  padding: 10px 20px 10px 5px;
+h1, h2, h3, h4, h5, h6 {
+  text-transform: uppercase;
+  font-weight: 600;
+  text-align: left;
 }
-.content .tag, .content .number {
-  display: inline;
-  padding: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  text-align: inherit;
-  vertical-align: inherit;
-  border-radius: inherit;
-  font-weight: inherit;
-  white-space: inherit;
-  background: inherit;
-  margin: inherit;
-}
+.mm code { margin: 0; padding: 0}
+.mm h1 { font-size: 2em}
+.mm h2 { font-size: 1.6em}
+.mm h3 { font-size: 1.4em}
+.mm h4 { font-size: 1.2em}
 .mm p, .mm br, .mm li, .mm ul {
   padding-bottom: 0.5em;
 }
@@ -27,42 +21,25 @@ body {
   line-height: 1.5em;
   text-align: justify;
 }
+.mm p {
+  margin: 0 0 0.1em 0;
+}
 .mm ul, .mm ol {
-  margin-left: 2em;
+  margin-left: 1em;
   list-style: initial;
+}
+.toc ul {
+  padding-left: 0;
+}
+.toc li {
+  margin-bottom: 0;
+  padding: .1em 1em 0.1em 1em;
+}
+.toc li:hover {
+  background-color: yellow;
 }
 .mm:not(.toc) li {
   margin-bottom: 0.5em;
-}
-.mm h1 {
-  margin: 20px 0 10px 0;
-  font-weight: bold;
-  font-size: 2em;
-  text-align: left;
-}
-.mm h2 {
-  margin: 18px 0 8px 0;
-  font-weight: bold;
-  font-size: 1.8em;
-  text-align: left;
-}
-.mm h3 {
-  margin: 16px 0 6px 0;
-  font-weight: bold;
-  font-size: 1.6em;
-  text-align: left;
-}
-.mm h4 {
-  margin: 14px 0 4px 0;
-  font-weight: bold;
-  font-size: 1.4em;
-  text-align: left;
-}
-.mm table {
-  width: 100%;
-}
-.mm td, .mm th {
-  padding: 2px 5px;
 }
 .mm tr:nth-child(even) {
   background-color: #f5f5f5;
