--- a/apps/_documentation/static/css/no.css
+++ b/apps/_documentation/static/css/no.css
@@ -239,7 +239,7 @@ input[type='checkbox'], input[type='radio'] {
  ****************************************************/
 
 body > div {
-  max-width: 960;
+  max-width: 900px;
   margin-left: auto;
   margin-right: auto;
 }
