added tagsinput widget

--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -104,6 +104,10 @@
     <td><a role="button" href="[[=URL('custom_form')]]">example</a></td>
   </tr>
   <tr>
+    <td>A form with tagsinput widget</td>
+    <td><a role="button" href="[[=URL('tagsinput_form')]]">example</a></td>
+  </tr>
+  <tr>
     <th colspan="2" class="is-info">Grid (no vue.js)</th>
   </tr>
   <tr>
