changed colors of tag pills

--- a/apps/examples/templates/tagsinput_form.html
+++ b/apps/examples/templates/tagsinput_form.html
@@ -12,9 +12,10 @@ ul.tags-list li {
   padding: 2px 5px 2px 5px;
   line-height: 1.2em;
   margin: 2px;
+  cursor: pointer;
 }
 ul.tags-list li.selected {
-  background-color: #0074d9;
+  background-color: #111111;
 }
 </style>
 
