--- a/apps/examples/templates/tagsinput_form.html
+++ b/apps/examples/templates/tagsinput_form.html
@@ -7,24 +7,39 @@ ul.tags-list {
 ul.tags-list li {
   display: inline-block;
   border-radius:5px;
-  background-color: #d1d1d1;
+  background-color: #111111;
   color: white;
   padding: 2px 5px 2px 5px;
   line-height: 1.2em;
   margin: 2px;
   cursor: pointer;
+  opacity: 0.2;
 }
 ul.tags-list li.selected {
-  background-color: #111111;
+  opacity: 1.0;
 }
+ul.tags-list li[data-value=red] { background-color: red; }
+ul.tags-list li[data-value=green] { background-color: green; }
+ul.tags-list li[data-value=blue] { background-color: blue; }
 </style>
 
 <h2 class="title">Tagsinput Example</h2>
 
 [[=form]]
 
+<i>
+You can enter new tags comma separted.
+Press [tab] to add tags.
+[enter] will submit the form.
+Look at the page source for how to customize tags.
+</i>
+
 [[block page_scripts]]
 <script>
-  utils.tagsinput('[name="colors"]', {tags:['red','green','blue'], freetext:true});
+  utils.tagsinput('[name=colors]', {
+    tags:['red','green','blue'],            // always display these tags
+    freetext: true,                         // allow typing custom tags 
+    placeholder:'add tags, comma separated' // text in the textfree input
+  });
 </script>
 [[end]]
