--- a/apps/examples/templates/tagsinput_form.html
+++ b/apps/examples/templates/tagsinput_form.html
@@ -6,10 +6,10 @@ ul.tags-list {
 }
 ul.tags-list li {
   display: inline-block;
-  border-radius:5px;
+  border-radius: 100px;
   background-color: #111111;
   color: white;
-  padding: 2px 5px 2px 5px;
+  padding: 0.3em 0.8em 0.2em 0.8em;
   line-height: 1.2em;
   margin: 2px;
   cursor: pointer;
