--- a/apps/examples/templates/auth_form.html
+++ b/apps/examples/templates/auth_form.html
@@ -4,3 +4,9 @@
 
 <h2>Generic Auth Form</h2>
 [[=form]]
+
+[[block page_scripts]]
+<script>
+utils.score_input('[type=password]');
+</script>
+[[end]]
