--- a/apps/_scaffold/templates/layout.html
+++ b/apps/_scaffold/templates/layout.html
@@ -39,7 +39,7 @@
           [[pass]]
         </ul>
       </nav>
-      <div class="padded" id="py4web-flash"></div>
+      <flash-alerts class="padded"></flash-alerts>
     </header>
     <!-- beginning of HTML inserted by extending template -->
     <div>
