--- a/apps/examples/templates/tagsinput_form.html
+++ b/apps/examples/templates/tagsinput_form.html
@@ -57,20 +57,20 @@ Look at the page source for how to customize tags.
 [[block page_scripts]]
 <script>
   // enable the first tagsinput
-  utils.tagsinput('[name=color]', {
+  Q.tagsinput('[name=color]', {
     tags:['red','green','blue'],            // always display these tags
     freetext: true,                         // allow typing custom tags 
     placeholder:'add tags, comma separated' // text in the textfree input
   });
 
   // enable the second tagsinpu8t
-  utils.tagsinput('[name=browsers]', {
+  Q.tagsinput('[name=browsers]', {
     autocomplete_list: 'browsers-list',
     placeholder: 'type the name of a browser',
   });
 
   // enable the first tagsinput
-  utils.tagsinput('[name=colors]', {
+  Q.tagsinput('[name=colors]', {
     tags:['red','green','blue'],            // always display these tags
     freetext: true,                         // allow typing custom tags 
     placeholder:'add tags, comma separated' // text in the textfree input
