--- a/apps/examples/templates/flash_example.html
+++ b/apps/examples/templates/flash_example.html
@@ -1,5 +1,5 @@
 [[extend 'layout.html']]
 
-<button onclick="utils.flash({message: 'you clicked the button', class:'warning'})">Click me</button>
+<button onclick="Q.flash({message: 'you clicked the button', class:'warning'})">Click me</button>
 <br/>or type something below<br/>
-<input onchange="utils.flash({message: this.value, class: 'success'});this.value='';"/>
+<input onchange="Q.flash({message: this.value, class: 'success'});this.value='';"/>
