Q.tagsinput->Q.tags_input

--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -104,7 +104,7 @@
     <td><a role="button" href="[[=URL('custom_form')]]">example</a></td>
   </tr>
   <tr>
-    <td>A form with tagsinput widget</td>
+    <td>A form with tags_input widget</td>
     <td><a role="button" href="[[=URL('tagsinput_form')]]">example</a></td>
   </tr>
   <tr>
