--- a/apps/examples/templates/tagsinput_form.html
+++ b/apps/examples/templates/tagsinput_form.html
@@ -16,7 +16,7 @@ ul.tags-list li {
   opacity: 0.2;
   text-transform: capitalize;
 }
-ul.tags-list li.selected {
+ul.tags-list li[data-selected=true] {
   opacity: 1.0;
 }
 ul.tags-list li[data-value=red] { background-color: red; }
