--- a/apps/myfeed/static/components/auth.html
+++ b/apps/myfeed/static/components/auth.html
@@ -1,9 +1,9 @@
-e<div>
+<div>
   <div v-if="user === null && page=='register'">
     <center>
       <h2 class="subtitle">Register</h2>
     </center>
-    <div class="field" v-if="fields[0] && fields[0].name == 'username'">
+    <div v-if="use_username" class="field">
       <input class="input" v-model="form.username" type="email" placeholder="username">
       <span v-if="errors.username">{{errors.username}}</span>
     </div>
@@ -75,7 +75,8 @@ e<div>
     </div>
     <div v-if="!plugins||plugins.indexOf('local')>=0">
       <div class="field">
-        <input class="input" v-model="form.email" type="email" placeholder="username or email">
+        <input v-if="use_username" class="input" v-model="form.email" type="email" placeholder="username or email">
+        <input v-if="!use_username" class="input" v-model="form.email" type="email" placeholder="email">
         <span v-if="errors.email">{{errors.email}}</span>
       </div>
       <div class="field">
