--- a/apps/_scaffold/static/css/no.css
+++ b/apps/_scaffold/static/css/no.css
@@ -40,6 +40,9 @@ html, body {
 body {
   font-family: "Roboto", Helvetica, Arial, sans-serif;
   line-height: 1.8em;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 /****************************************************
@@ -106,7 +109,7 @@ h6{
 
 header, footer {
   display:block;
-  width:100%
+  width:100%;
 }
 
 code {
@@ -240,7 +243,7 @@ input[type='checkbox'], input[type='radio'] {
  grid and page formatting
  ****************************************************/
 
-body > div {
+body > div > * {
   max-width: 900px;
   margin-left: auto;
   margin-right: auto;
