fixed centering of alerts and sticky footer

--- a/apps/examples/templates/layout.html
+++ b/apps/examples/templates/layout.html
@@ -44,16 +44,18 @@
           [[pass]]
         </ul>
       </nav>
-      <!-- Flash alert messages, first optional one in data-alert -->
-      <flash-alerts class="padded" data-alert="[[=globals().get('flash','')]]"></flash-alerts>
     </header>
     <!-- beginning of HTML inserted by extending template -->
-    <div>
+    <center>
+      <div>
+        <!-- Flash alert messages, first optional one in data-alert -->
+        <flash-alerts class="padded" data-alert="[[=globals().get('flash','')]]"></flash-alerts>
+      </div>
       <main class="padded">
         <!-- contect injected by extending page -->
         [[include]]
       </main>
-    </div>
+    </center>
     <!-- end of HTML inserted by extending template -->
     <footer class="black padded">
       <p>
