--- a/apps/_scaffold/static/css/no.css
+++ b/apps/_scaffold/static/css/no.css
@@ -243,7 +243,8 @@ input[type='checkbox'], input[type='radio'] {
  grid and page formatting
  ****************************************************/
 
-body > div > * {
+body > center > * {
+  text-align: initial;
   max-width: 900px;
   margin-left: auto;
   margin-right: auto;
@@ -499,8 +500,8 @@ input[type=checkbox]:checked ~ div {visibility:visible; opacity:1}
  ****************************************************/
 
 [role="alert"] {
-  margin: 20px 25px 0 25px;
-  padding: 20px 50px 20px 20px;
+  margin: 1.5em;
+  padding: 1.5em;
   position: relative;
   border-radius: 5px;
   color: black;
