--- a/apps/examples/static/css/no.css
+++ b/apps/examples/static/css/no.css
@@ -40,6 +40,9 @@ html, body {
 body {
   font-family: "Roboto", Helvetica, Arial, sans-serif;
   line-height: 1.8em;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 /****************************************************
@@ -106,7 +109,7 @@ h6{
 
 header, footer {
   display:block;
-  width:100%
+  width:100%;
 }
 
 code {
@@ -240,7 +243,8 @@ input[type='checkbox'], input[type='radio'] {
  grid and page formatting
  ****************************************************/
 
-body > div {
+body > center > * {
+  text-align: initial;
   max-width: 900px;
   margin-left: auto;
   margin-right: auto;
@@ -496,8 +500,8 @@ input[type=checkbox]:checked ~ div {visibility:visible; opacity:1}
  ****************************************************/
 
 [role="alert"] {
-  margin: 20px 25px 0 25px;
-  padding: 20px 50px 20px 20px;
+  margin: 1.5em;
+  padding: 1.5em;
   position: relative;
   border-radius: 5px;
   color: black;
