--- a/apps/myfeed/templates/layout.html
+++ b/apps/myfeed/templates/layout.html
@@ -67,8 +67,7 @@
       </div>
     </footer>
   </body>
-  <script src="js/sugar.min.js"></script>
-  <script src="js/axios.min.js"></script>
+  <script src="js/utils.js"></script>
   <script src="js/vue.min.js"></script>
   [[block page_scripts]]<!-- individual pages can add scripts here -->[[end]]
 </html>
