--- a/apps/myfeed/templates/layout.html
+++ b/apps/myfeed/templates/layout.html
@@ -68,6 +68,7 @@
     </footer>
   </body>
   <script src="js/utils.js"></script>
+  <script src="js/axios.min.js"></script>
   <script src="js/vue.min.js"></script>
   [[block page_scripts]]<!-- individual pages can add scripts here -->[[end]]
 </html>
