moved websocket and no more need for jquery

--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -1,6 +1,5 @@
 [[extend 'layout.html']]
 
-
 <table class="table">
   <tr>
     <th colspan="2" class="is-info">Basic Examples</th>
@@ -176,5 +175,16 @@
     <td>Star rating component in Vue using Bulma css; example of component instantiation from Vue.
       Subclass components.starrater.StarRater to tailor.</td>
     <td><a role="button" href="[[=URL('star_rater_vue_bulma')]]">example</a></td>
+  </tr>
+  <tr>
+    <th colspan="2" class="is-info">Websocket Examples</th>
+  </tr>
+  <tr>
+    <td>A page using websockets</td>
+    <td><a role="button" href="[[=URL('ws')]]">ws</a></td>
+  </tr>
+  <tr>
+    <td>A page using websockets with socketio</td>
+    <td><a role="button" href="[[=URL('socketio')]]">socketio</a></td>
   </tr>
 </table>
