--- a/apps/_scaffold/static/css/no.css
+++ b/apps/_scaffold/static/css/no.css
@@ -230,8 +230,12 @@ fieldset {
   padding: 0;
 }
 
-input[type='checkbox'], input[type='radio'] {
+input[type='checkbox'] {
   display: inline;
+}
+
+input[type="radio"]{
+  margin: 0 10px 0 10px;
 }
 
 [disabled] {
