Make radio buttons look nice per default

--- a/apps/_scaffold/static/css/no.css
+++ b/apps/_scaffold/static/css/no.css
@@ -230,9 +230,14 @@ fieldset {
   padding: 0;
 }
 
-input[type='checkbox'], input[type='radio'] {
+input[type='checkbox'] {
   display: inline;
 }
+
+input[type="radio"]{
+  margin: 0 10px 0 10px;
+}
+
 
 [disabled] {
   cursor: default;
