--- a/apps/_dashboard/templates/dbadmin.html
+++ b/apps/_dashboard/templates/dbadmin.html
@@ -13,7 +13,7 @@
           Table: {{tablename}}
         </label>
       </div>      
-      <div id="panel" class="panel">
+      <div id="panel" class="gridPanel">
         [[if error:]]
           <div>
             <p class="error"> An error has occured, please make sure that the query parameters: "app", "dbname", and "tablename" are all filled out.</p>
