--- a/apps/_dashboard/templates/dbadmin.html
+++ b/apps/_dashboard/templates/dbadmin.html
@@ -5,32 +5,25 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   </head>
   <body>    
-    <div id="vue">
+    <div>
       <div class="panel">   
         <label>
-          App: {{app}}
-          Database: {{dbname}}
-          Table: {{tablename}}
+          App: [[=app]]
+          Database: [[=dbname]]
+          Table: [[=tablename]]
         </label>
-      </div>      
-      <div id="panel" class="gridPanel">
+      </div>
+      <div style="padding: 10px" class="my-effects">
         [[if error:]]
           <div>
             <p class="error"> An error has occured, please make sure that the query parameters: "app", "dbname", and "tablename" are all filled out.</p>
-            <a class="btn" href="[[=URL('index')]]">Return</a>
           </div>
         [[else:]]
-        <div hx-get="[[=gridURL]]" hx-trigger="load" hx-target="#panel">
-        </div>
+	  [[=grid.render()]]
         [[pass]]
       </div>
     </div>
   </body>
-  <script src="https://unpkg.com/htmx.org@1.3.2"></script>
-  <script src="js/sugar.min.js"></script>
-  <script src="js/vue.min.js"></script>
-  <script src="js/axios.min.js"></script>
   <script src="js/utils.js"></script>
   <script>T.languages = [[=languages]];</script>
-  <script src="js/dbadmin.js"></script>
 </html>
