--- a/apps/_dashboard/templates/index.html
+++ b/apps/_dashboard/templates/index.html
@@ -166,7 +166,7 @@
                                 <td>{{ticket.method}}</td>
                                 <td>{{ticket.path}}</td>
                                 <td><a target="blank" v-bind:href="'/_dashboard/ticket/'+ticket.uuid">{{ticket.error}}</a></td>
-                                <td><a class="button" target="blank" v-bind:href="'/_dashboard/dbadmin?app=_dashboard&dbname=db&tablename=py4web_error&filter=path%3D'+ticket.path+' and error%3D'+ticket.error">Search</a></td>
+                                <td><a class="button" target="blank" v-bind:href="'/_dashboard/dbadmin/_dashboard/db/py4web_error&filter=path%3D'+ticket.path+' and error%3D'+ticket.error">Search</a></td>
                             </tr>
                         </tbody>
                     </table>
